--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -5,15 +5,24 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
-    android:orientation="horizontal"
+    android:orientation="vertical"
     tools:context=".MyProfile">
 
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="163dp"
+        android:layout_height="160dp"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="40dp"
+        app:srcCompat="@drawable/festify_icon" />
+
     <TextView
+        android:id="@+id/txtUsernameProfile"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="10dp"
-        android:layout_marginTop="100dp"
-        android:text="@string/Show_Email"
+        android:layout_marginTop="80dp"
+        android:layout_marginLeft="5dp"
+        android:text="txtUsername"
         android:textColor="@color/colorSecondaryDark"
         android:textSize="20sp" />
 
@@ -21,30 +30,17 @@
         android:id="@+id/txtEmailProfile"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="100dp"
-        android:layout_marginLeft="10dp"
+
+        android:layout_marginTop="70dp"
+        android:layout_marginLeft="5dp"
         android:text="txtEmail"
         android:textColor="@color/colorSecondaryDark"
         android:textSize="20sp" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="10dp"
-        android:layout_marginTop="40dp"
-        android:text="@string/Show_Username"
-        android:textColor="@color/colorSecondaryDark"
-        android:textSize="20sp" />
 
-    <TextView
-        android:id="@+id/txtUsernameProfile"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="120dp"
-        android:layout_marginTop="5dp"
-        android:text="txtUsername"
-        android:textColor="@color/colorSecondaryDark"
-        android:textSize="20sp" />
+
+
+
 
 
 </LinearLayout>
