--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,6 +13,10 @@
 
     <color name="colorSucces">#2ecc71</color>
     <color name="colorError">#FF4444</color>
-
-
+    <!--grad.xml-->
+    <color name="gradStart">#2196F3</color>
+    <color name="gradEnd">#156CAF</color>
+    <!--RecyclerView-->
+    <color name="name_text_color">#333333</color>
+    <color name="horizontal_image_background">#80FFFFFF</color>
 </resources>
