--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -30,17 +30,23 @@
         android:id="@+id/txtEmailProfile"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-
         android:layout_marginTop="70dp"
         android:layout_marginLeft="5dp"
         android:text="txtEmail"
         android:textColor="@color/colorSecondaryDark"
         android:textSize="20sp" />
 
+    <Button
+        android:id="@+id/logoutButton"
 
-
-
-
+        android:layout_width="270dp"
+        android:layout_height="60dp"
+        android:background="@drawable/buttonshapelogout"
+        android:layout_marginTop="60dp"
+        android:text="Logout"
+        android:layout_gravity="center_horizontal"
+        android:textColor="#FFFFFF"
+        android:textSize="30sp" />
 
 
 </LinearLayout>
