--- a/app/src/main/res/layout/data_single_item_room.xml
+++ b/app/src/main/res/layout/data_single_item_room.xml
@@ -1,22 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:layout_marginLeft="10dp"
+    android:layout_marginTop="10dp"
+    android:layout_marginEnd="10dp"
+    android:orientation="vertical">
 
     <android.support.v7.widget.CardView
         android:id="@+id/card_view"
-        android:layout_gravity="center"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="70dp"
+        android:layout_gravity="center"
+        android:layout_marginLeft="5dp"
         app:cardCornerRadius="4dp">
 
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:paddingTop="11dp"
+            android:layout_marginTop="10dp"
             android:paddingLeft="10dp"
+            android:paddingTop="11dp"
             android:paddingRight="11dp">
 
 
@@ -25,19 +30,17 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="TextView" />
-            
+
 
             <Button
-                android:id="@+id/startRouteButton"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/artistTextView"
-                android:layout_marginTop="15dp"
-                android:background="@drawable/grad"
-                android:text="@string/start_route"
-                android:layout_marginBottom="15dp"
-                android:textColor="@color/white"
-                android:textSize="18sp"
+                android:id="@+id/joinRoomButton"
+                android:layout_width="100dp"
+                android:layout_height="30dp"
+                android:layout_marginLeft="250dp"
+                android:background="@drawable/buttonshapelogout"
+                android:text="@string/JoinRoomButtonText"
+                android:textColor="#FFFFFF"
+                android:textSize="12sp"
                 android:visibility="gone" />
         </RelativeLayout>
 
