--- a/app/src/main/res/layout/activity_addsong.xml
+++ b/app/src/main/res/layout/activity_addsong.xml
@@ -9,12 +9,11 @@
     android:orientation="vertical">
 
 
-
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_marginTop="120dp"
+        android:layout_marginTop="100dp"
         android:text="@string/app_name"
         android:textColor="@color/colorSecondaryDark"
         android:textSize="50sp" />
@@ -26,7 +25,7 @@
         android:layout_gravity="center"
         android:layout_marginTop="50dp"
         android:hint="@string/songName"
-        android:inputType="textEmailAddress"
+        android:inputType="text"
         android:drawableStart="@drawable/ic_baseline_audiotrack_24"
         android:drawablePadding="10dp"
         android:backgroundTint="@color/colorSecondary"
@@ -39,6 +38,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginTop="20dp"
+        android:inputType="text"
         android:backgroundTint="@color/colorSecondary"
         android:drawablePadding="10dp"
         android:drawableStart="@drawable/ic_person_black_24dp"
