--- a/app/src/main/res/layout/fragment_rooms_location.xml
+++ b/app/src/main/res/layout/fragment_rooms_location.xml
@@ -47,7 +47,7 @@
         android:visibility="invisible" />
 
     <TextView
-        android:id="@+id/routes_error_textView"
+        android:id="@+id/error_textView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="center"
@@ -58,7 +58,7 @@
         android:visibility="gone" />
 
     <Button
-        android:id="@+id/button_retry_routes"
+        android:id="@+id/button_retry"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
