--- a/app/src/main/res/layout/fragment_songs.xml
+++ b/app/src/main/res/layout/fragment_songs.xml
@@ -22,7 +22,7 @@
     android:visibility="invisible" />
 
     <TextView
-        android:id="@+id/routes_error_textView"
+        android:id="@+id/error_textView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="center"
@@ -33,7 +33,7 @@
         android:visibility="gone" />
 
     <Button
-        android:id="@+id/button_retry_routes"
+        android:id="@+id/button_retry"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
